<resources>
    <string name="app_name">PlazaWalk</string>
    <string name="scanBeacon">You are out of range</string>
    <string name="NoStores">No stores nearby</string>
    <string name="StoresNear">Stores Near You</string>
    <string name="InterestStore">These Might Interest You</string>
    <string name="ShowDirection">Show Direction</string>
    <string name="ShowProduct">View Products</string>
    <string name="ProductList">Products Available</string>
</resources>
