<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maingradient"
    tools:context="com.fyp.masukami.weacon.Main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/upperLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBLEinRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/scanBeacon"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewLayout"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="2dp"
                android:background="#80FE3562"/>

            <TextView
                android:id="@+id/tvnearStores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#80FFFFFF"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/StoresNear"
                android:textColor="#000000"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/advertisersList"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvEmptyList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/NoStores"
                android:textColor="#989898"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lowerLayout"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/viewLayout2"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="2dp"
                    android:background="#80FE3562"/>

                <TextView
                    android:id="@+id/tvstoreInterest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="#80FFFFFF"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/InterestStore"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/relatedList"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/btnProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/roundbutton"
                android:text="@string/ShowProduct" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

